--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,58 +1,50 @@
-name: Build Go 1.25 Image
+name: build go
 
 on:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * 1"
   push:
     branches:
       - main
     paths:
-      - 'go/1.25/**'
-      - 'go/entrypoint.sh'
-      - '.github/workflows/go.yml'
-  workflow_dispatch:
+      - go/**
 
-env:
-  REGISTRY: ghcr.io
+permissions:
+  packages: write
 
 jobs:
-  build:
+  push:
+    name: "yolks:go_${{ matrix.tag }}"
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
+    strategy:
+      fail-fast: false
+      matrix:
+        tag:
+          - '1.25'
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      
+      - uses: docker/setup-buildx-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          buildkitd-flags: --debug
+      
+      - id: lower-repo
+        name: Repository to lowercase
+        run: |
+          echo "repository=${GITHUB_REPOSITORY_OWNER@L}" >> $GITHUB_OUTPUT
+      
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ steps.lower-repo.outputs.repository }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
+      
+      - uses: docker/build-push-action@v6
         with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/yolks
-          tags: |
-            type=raw,value=go_1.25
-            type=raw,value=go_latest
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./go/1.25
+          context: ./go
+          file: ./go/${{ matrix.tag }}/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: |
+            ghcr.io/${{ steps.lower-repo.outputs.repository }}/yolks:go_${{ matrix.tag }}
